--- a/src/app/components/grid-component/grid-component.component.html
+++ b/src/app/components/grid-component/grid-component.component.html
@@ -1,26 +1,13 @@
-<!-- <div *ngFor="let bear of (bears$|async)" class="card">
+<div class="container">
+    <h1>Welcome To Bear Store</h1>
+    <span>Here you will find one of the best bears</span>
+</div>
 
-    <div>
+<div class="grid-container">
+    <div class="grid-item card" *ngFor="let bear of (bears$|async)">
         <img src="{{bear.image_url}}" class="image-size" />
-        <h1>{{bear.name}}</h1>
+        <h4>{{bear.name}}</h4>
+        <button class="button-buy">Buy Now</button>
+
     </div>
-
-
-
-
-
-
-</div> -->
-
-<div class="flex-container" *ngFor="let bear of (bears$|async)">
-
-    <div class="flex-child magenta">
-        <img src="{{bear.image_url}}" class="image-size" />
-        <h1>{{bear.name}}</h1>
-    </div>
-
-    <!-- <div class="flex-child green">
-        Flex Column 2
-    </div> -->
-
 </div>
