--- a/src/app/components/grid-component/grid-component.component.scss
+++ b/src/app/components/grid-component/grid-component.component.scss
@@ -1,17 +1,83 @@
 .image-size{
     width: 200px;
-    height: 200px;
+    height: 75%;
 }
 
-.flex-container {
+.container{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.grid-container {
     display: grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+
+}
+.grid-item {
+    padding: 20px;
+    height: 400px;
+    font-size:15px;
+    text-align: center;
+ }
+
+.card {
+    // border: 2px dashed black;
+    margin: 5px;
+    box-shadow: 0px 5px 5px rgba(150,150,150,.5);
+}
+  
+.card:hover {
+    box-shadow: 0px 5px 5px  gray;
+}
+.button-buy {
+  margin-bottom: 5px;
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
 }
 
-.flex-child {
-    flex: 2;
-    border: 2px solid yellow;
-}  
+.button-buy:focus:not(:focus-visible):not(.focus-visible) {
+  box-shadow: none;
+  outline: none;
+}
 
-.flex-child:first-child {
-    margin-right: 20px;
+.button-buy:hover {
+  background-color: #2c974b;
+}
+
+.button-buy:focus {
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  outline: none;
+}
+
+.button-buy:disabled {
+  background-color: #94d3a2;
+  border-color: rgba(27, 31, 35, .1);
+  color: rgba(255, 255, 255, .8);
+  cursor: default;
+}
+
+.button-buy:active {
+  background-color: #298e46;
+  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
